--- a/app/src/main/res/layout/cart_list_item.xml
+++ b/app/src/main/res/layout/cart_list_item.xml
@@ -57,11 +57,21 @@
             android:textSize="17dp" />
 
         <TextView
-            android:id="@+id/description"
+            android:id="@+id/barcode"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_below="@id/name"
             android:layout_marginTop="5dp"
+            android:layout_toRightOf="@id/thumbnail"
+            android:textColor="@color/description"
+            android:textSize="12dp" />
+
+        <TextView
+            android:id="@+id/description"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/name"
+            android:layout_marginTop="27dp"
             android:layout_toRightOf="@id/thumbnail"
             android:textColor="@color/description"
             android:textSize="12dp" />
