--- a/app/src/main/res/menu/main_menu.xml
+++ b/app/src/main/res/menu/main_menu.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
-    <group android:id="@+id/group">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".MainActivity">
+
     <item
-        android:id="@+id/sale"
-        android:actionLayout="@layout/activity_main"
-        android:icon="@drawable/sale"
-        android:orderInCategory="101"
-        android:title="Скидка"
-        app:showAsAction="always" />
-    </group></menu>
+        android:id="@+id/action_favorite"
+        android:orderInCategory="300"
+        android:title="User"
+        android:icon="@drawable/small_logo"
+        app:showAsAction="ifRoom"></item>
+
+</menu>
